# rust-wasix-axum-wasmer

./: Cargo.toml
.github/workflows/: ci.yml
src/: main.rs
